--- a/frontend/src/components/Body.css
+++ b/frontend/src/components/Body.css
@@ -39,7 +39,7 @@
     max-width: 150px;
     height: auto;
     max-height: 100px;
-    border-radius: 33%;
+    border-radius: 10px;
 }
 
 /* strCategory: "Beef"
