--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,128 @@
-/* .App{
-    display: flex;
-    flex-direction: column;
-} */
-
-.App{
-    background-color: rosybrown;
+.App .body {
+  background-color: #EAE2B7;
+  height: 100vh;
+  text-align: center;
 }
+
+.App .body .body__search_box {
+  padding-top: 24px;
+}
+
+.App .body .body__search_box input {
+  outline-width: 0;
+  border-radius: 30px;
+  padding: 10px;
+  border: none;
+}
+
+.App .body .body__search_box button {
+  border: none;
+  outline-width: 0;
+  color: #65baff;
+}
+
+.App .body .body__cats {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.App .body .body__cats__indiv {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 14%;
+          flex: 1 0 14%;
+  cursor: pointer;
+  margin: 8px 0 8px 0;
+}
+
+.App .body .body__cats__indiv img {
+  width: auto;
+  max-width: 150px;
+  height: auto;
+  max-height: 100px;
+  border-radius: 10px;
+}
+
+.App .category {
+  background-color: #EAE2B7;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.App .category .category__cont {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 15%;
+  padding-right: 15%;
+  padding-top: 20px;
+}
+
+.App .category .category__cont .cat__dish {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 25%;
+          flex: 0 0 25%;
+  cursor: pointer;
+  text-align: center;
+  background-color: #FCBF49;
+  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+.App .category .category__cont .cat__dish img {
+  width: auto;
+  max-width: 250px;
+  height: auto;
+  max-height: 200px;
+  border-radius: 50%;
+}
+
+.App .category .category__cont .cat__dish img:hover {
+  border-radius: 10px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.App .category .category__cont .cat__dish p {
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+}
+
+.App .category .pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #65baff;
+  width: 50%;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.App .category .pagination .page-item {
+  cursor: pointer;
+}
+/*# sourceMappingURL=App.css.map */
