--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,5 +1,5 @@
-.navbar__cont{
-    background-color: #fff7b0;
+/* .navbar__cont{
+    background-color: #003049;
     height: 8vh;
 }
 
@@ -27,4 +27,4 @@
 .navbar__right{
     display: flex;
     justify-content: space-around;  
-}
+} */
